# SubdivisionSkinning

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.md
lib/: CMakeLists.txt  ColorMap.h  Timing.cpp  Timing.hpp  save_obj.cpp  save_obj.h  subdivision_engine.cpp  subdivision_engine.h  subdivision_limit_mesh.cpp  subdivision_limit_mesh.h  subdivision_matrices.cpp  subdivision_matrices.h  subdivision_matrices_eigen.cpp  subdivision_matrices_eigen.h  subdivision_matrices_osd.cpp  subdivision_matrices_osd.h  subdivision_matrices_osd_eigen.cpp  subdivision_matrices_osd_eigen.h  subdivision_matrix_types.h  subdivision_skinning.cpp  subdivision_skinning.h  subdivision_skinning_wrapper.cpp  subdivision_skinning_wrapper.h  subdivision_skinning_wrapper_test.cpp
subdivgui/: CMakeLists.txt  Makefile  Mesh.cpp  Mesh.h  README.md  clean.cpp  clean.h  refine.cpp  robust_bbw.cpp  robust_bbw.h  subdiv_weights.cpp  subdiv_weights.h  subdivgui.cpp  subdivision_skinning_wrapper_test.cpp  torus-weights.dmat  torus.tgf
